Fix spacing between game elements
Use flexbos to adjust spacing between squares and between the board, title, and history buttons. Additionally adjusted the font while adjusting the spacing of the title.

--- a/src/components/board.css
+++ b/src/components/board.css
@@ -1,19 +1,24 @@
 .board-wrapper {
   width: 700px;
   height: 700px;
-  border-left: solid black 1px;
-  border-right: solid black 1px;
+  border-left: solid black 3px;
+  border-right: solid black 3px;
   margin: auto;
-  background-color: #000080;
-}
 
-.top-row {
-  height: 10%;
-}
-.row {
-  width: 100%;
-  height: 15%;
+  background-color: #000080;
 
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
+
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+  width: 100%;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
