--- a/src/components/historyButton.css
+++ b/src/components/historyButton.css
@@ -18,13 +18,15 @@
 }
 
 .historyButtons {
-  width: 700px;
   margin: auto;
-  border: solid black 1px;
-  border-top: 0px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px;
   background-color: #000080;
 
   display: flex;
+}
+
+.historyButtonsContainer {
+  margin: auto;
+  width: 700px;
+  border: solid black 3px;
 }
