--- a/src/components/square.css
+++ b/src/components/square.css
@@ -2,7 +2,9 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  margin: 2px;
+  display: block;
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 .square:hover {
